--- a/Views/Shared/Register_Layout.cshtml
+++ b/Views/Shared/Register_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -19,5 +19,9 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <!-- Render the Scripts section here -->
+    @RenderSection("Scripts", false)
+
 </body>
 </html>
