--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -260,7 +260,7 @@
                         <li>Maintenance Logs</li>
                         <li>Task Scheduler</li>
                     </ul>
-                    <a href="/Account/Register" class="btn btn-primary">Get Started</a>
+                    <a asp-controller="Home" asp-action="Create" class="btn btn-primary">Get Started</a>
                 </div>
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
@@ -272,7 +272,7 @@
                         <li>Advanced Reports</li>
                         <li>Priority Support</li>
                     </ul>
-                    <a href="/Account/Register" class="btn btn-primary">Get Started</a>
+                    <a asp-controller="Home" asp-action="Create" class="btn btn-primary">Get Started</a>
                 </div>
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
@@ -284,7 +284,7 @@
                         <li>Family Accounts</li>
                         <li>Custom Integrations</li>
                     </ul>
-                    <a href="/Account/Register" class="btn btn-primary">Get Started</a>
+                    <a asp-controller="Home" asp-action="Create" class="btn btn-primary">Get Started</a>
                 </div>
             </div>
         </div>
